cluster/kube-system/ingress-kube-dash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-kubedash-minion
    namespace: kube-system
    annotations:
      nginx.org/mergeable-ingress-type: "minion"
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: kube-dash.gawn.dev
      http:
        paths: 
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  name: https
